refactor PluginXmlLoader to use toList() instead of Collectors.toList()